# user_defined_build_settings

./: .bazelrc  BUILD.bazel  Readme.txt  WORKSPACE  first_rule.bzl
second/: .bazelrc  BUILD.bazel  WORKSPACE  second_rule.bzl
