load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("second_rule.bzl", "second_rule")

package(default_visibility = ["//visibility:public"]) 

string_flag(
    name = "second_flag",
    values = ["", "sf1", "sf2"],
    build_setting_default = "",
)

second_rule(
    name = "second",
)